# zkFuzz

./: .gitignore  .gitmodules  CONTRIBUTION.md  Cargo.toml  DESIGN.md  NOTE.md  README.md  build.rs  update_submodules.sh
.github/workflows/: tcct.yaml  test.yaml
audit/: README.md
audit/poc/: BFS@zksnarks-library.circom  BFS@zksnarks-library.counterexample  FastAddMod@circomlib-fhe.circom  FastAddMod@circomlib-fhe.counterexample  GlInvInv@circom-monolith.circom  GlInvInv@circom-monolith.counterexample  HisShip@battlesnark.counterexample  HitShip@battlesnark.circom  IsNoneZero1@zk-template.circom  IsValidSolutionOfPuzzle@zksnark-sudoku-master.circom  ModP@Circom-examples.circom  PaymentAmountVerifer@zk-pay.circom  StringCheck@zk-circom-project.circom  StringCheck@zk-circom-project.counterexample  VAAS@ptnet-ZKP.circom  VAAS@ptnet-ZKP.counterexample  Vote@zk-snark-voting.circom  Vote@zk-snark-voting.counterexample  VotingCircuit@zk-Election.circom  evalMultivariate@gkr.circom  evalMultivariate@gkr.counterexample
benchmark/: circom_template_counts.csv  count.sh
benchmark/sample/: add32bits.ll  (+20 more)
circom2llvm/: Cargo.toml
doc/: CIRCOM.md  IDEA.md  README.md
noir/: Cargo.toml  README.md
noir/examples/: Nargo.toml
noir/examples/artificial/div/src/: main.nr
noir/examples/artificial/iszero/src/: main.nr
noir/examples/artificial/rshift1/src/: main.nr
noir/examples/div/: Nargo.toml  Prover.toml
noir/examples/div/src/: main.nr
noir/examples/ecrecover-noir/: Nargo.toml  README.md
noir/examples/ecrecover-noir/src/: main.nr
noir/examples/noir_check_shuffle/check_shuffle/: Nargo.toml
noir/examples/noir_check_shuffle/check_shuffle/src/: main.nr
noir/examples/noir_check_shuffle/get_shuffle_indices/: Nargo.toml  Prover.toml
noir/examples/noir_check_shuffle/get_shuffle_indices/src/: main.nr
noir/examples/noir_sort/sort/: Nargo.toml
noir/examples/noir_sort/sort/src/: main.nr
noir/examples/noir_sort/sort_extended/src/: main.nr
noir/examples/noir_sort/sort_via/: Prover.toml
noir/examples/noir_sort/sort_via/src/: main.nr
noir/examples/noir_substring_match/: Nargo.toml  Prover.toml
noir/examples/noir_substring_match/src/: main.nr
noir/examples/rshift1/: Nargo.toml
noir/src/: main.rs
parameters/: blind.json  demo_0.json  distribution.json  naive.json
proofuzz/: BasicStatsPass.cpp  CMakeLists.txt  Cargo.toml  ExtendedPrintGraphviz.cpp  ExtendedProtocolFlowGraph.cpp  ExtendedProtocolFlowGraph.hpp  InitializeConstraintPass.cpp  MainAdderPass.cpp  README.md  build.sh  helpers.cpp  helpers.hpp
proofuzz/doc/: BUG.md  CIRCOM.md  README.md
proofuzz/sample/: add32bits.ll  callfunction.circom  edwards2montgomery.circom  edwards2montgomery.ll  ifelse.circom  iszero_over_constrained.circom  iszero_safe.dot  iszero_safe.ll  iszero_safe_linked.ll  iszero_safe_linked_overwrite.ll  iszero_safe_modified_overwrite.ll  iszero_vuln_overwritten.ll  iszero_vuln_overwritten_linked_instrumented.ll  iszero_wo_constraints.ll  singleassignment0.circom
sample/: add32bits.circom  add32bits_mal.circom  add32bits_mal.ll  ifelse_template.circom  iszero_safe.circom  iszero_safe_modified.ll  iszero_vuln_overwritten_linked.ll  lessthan3.circom  sum.circom
script/: benchmark.sh  demo_fitness_error.sh  demo_fitness_random.sh  sample.sh  stats.sh  test.sh
src/: input_user.rs  main.rs
tcct/: Cargo.toml  README.md  aggregate.sh  sample.sh  stats.sh
tcct/parameters/: coverage.json  demo_1.json  seed.json
tcct/script/: benchmark.sh  demo_fitness_error.sh  demo_fitness_random.sh
tcct/src/: debug_ast.rs  execution_user.rs  input_user.rs  lib.rs  main.rs  parser_user.rs  solver.rs  stats.rs  symbolic_execution.rs  symbolic_value.rs  utils.rs
tcct/src/executor/: coverage.rs  debug_ast.rs  mod.rs  symbolic_execution.rs  symbolic_setting.rs  symbolic_state.rs  symbolic_value.rs  utils.rs
tcct/src/mutator/: brute_force.rs  mutation_config.rs  mutation_test.rs  mutation_test_crossover_fn.rs  mutation_test_trace_fitness_fn.rs  mutation_test_trace_initialization_fn.rs  mutation_test_trace_mutation_fn.rs  mutation_test_trace_selection_fn.rs  mutation_utils.rs  unused_outputs.rs  utils.rs
tcct/src/solver/: brute_force.rs  eval.rs  mod.rs  mutation_config.rs  mutation_test.rs  mutation_test_crossover_fn.rs  mutation_test_evolution_fn.rs  mutation_test_trace_fitness_fn.rs  mutation_test_trace_initialization_fn.rs  mutation_test_trace_mutation_fn.rs  mutation_test_trace_selection_fn.rs  mutation_test_update_input_fn.rs  mutation_utils.rs  unused_outputs.rs  utils.rs
tcct/src/stats/: ast_stats.rs  mod.rs  symbolic_stats.rs
tcct/tests/: coverage_test.rs  executor_test.rs  mutation_testing_test.rs  symbolic_executor_test.rs  symbolic_trace_emulation_test.rs  symbolic_value_test.rs  utils.rs
tcct/tests/parameters/: test.json
tcct/tests/sample/: 2darray_var.circom  anonymous_component.circom  average.circom  complex_array_assign.circom  feed_array.circom  gcd.circom  initialize_array_with_var.circom  input_subscript.circom  iszero_vuln.circom  lessthan3.circom  modulus.circom  pocker.circom  reward.circom  sample.circom  semi_anonymous_component_array.circom  test_2d_array_component.circom  test_anonymous_component.circom  test_array_template_argument.circom  test_bulk_assignment.circom  test_coverage.circom  test_hash_break.circom  test_input_subscript_1d.circom  test_input_subscript_2d.circom  test_multi_substitution.circom  test_multidimensional_array_function.circom  test_one_line_call.circom  test_recursive_call.circom  test_recursive_function.circom  test_safelessthan.circom  test_var_bulk_assignment.circom  test_vuln_iszero.circom  unused_output.circom
test/: matrix.t.circom  matrix.t.json
tests/: coverage_test.rs  mutation_testing_test.rs  symbolic_executor_test.rs  symbolic_trace_emulation_test.rs  symbolic_value_test.rs  utils.rs  zero_division_test.rs
zkap/: README.md
zkap/detectors/: CMakeLists.txt  PrintGraphviz.cpp  ProtocolFlowGraph.cpp  ProtocolFlowGraph.hpp  build.sh  utils.cpp  utils_arrayshapes.cpp  utils_basicinfo.hpp  utils_funcs.cpp  utils_funcs.hpp
(+130 files in other folders)
