[package]
name = "zkfuzz-noir"
version = "2.2.1"
edition = "2021"
authors = ["Koukyosyumei <koukyosyumei@hotmail.com>"]
description = "ZK Circuit Fuzzer"
license = "GPL-3.0"
repository = "https://github.com/Koukyosyumei/zkFuzz"
keywords = ["fuzzing", "security", "zero-knowledge-proof", "zkp"]

[[bin]]
name = "zkfuzz-noir"
path = "src/main.rs"

[dependencies]
noir_artifact_cli = { git = "https://github.com/noir-lang/noir.git", package = "noir_artifact_cli" }
noirc_driver = { git = "https://github.com/noir-lang/noir.git", package = "noirc_driver" }
nargo_cli = { git = "https://github.com/noir-lang/noir.git", package = "nargo_cli" }
nargo = { git = "https://github.com/noir-lang/noir.git", package = "nargo" }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir.git", package = "bn254_blackbox_solver" }
brillig = { git = "https://github.com/noir-lang/noir.git", package = "brillig" }
acvm = { git = "https://github.com/noir-lang/noir.git", package = "acvm" }
acir = { git = "https://github.com/noir-lang/noir.git", package = "acir" }
noirc_abi = { git = "https://github.com/noir-lang/noir.git", package = "noirc_abi" }
clap = { version = "4.3.19", features = ["derive", "env"] }
color-eyre = "0.6.2"
const_format = "0.2.30"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
serde_json = "1.0"
rand = "0.9.1"
