[package]
name = "zkfuzz-noir"
version = "2.2.1"
edition = "2021"
authors = ["Koukyosyumei <koukyosyumei@hotmail.com>"]
description = "ZK Circuit Fuzzer"
license = "GPL-3.0"
repository = "https://github.com/Koukyosyumei/zkFuzz"
keywords = ["fuzzing", "security", "zero-knowledge-proof", "zkp"]

[[bin]]
name = "zkfuzz-noir"
path = "src/main.rs"

[dependencies]
noir_artifact_cli = { git = "https://github.com/Koukyosyumei/noir.git", package = "noir_artifact_cli", branch = "zkfuzz" }
noirc_driver = { git = "https://github.com/Koukyosyumei/noir.git", package = "noirc_driver", branch = "zkfuzz" }
nargo_cli = { git = "https://github.com/Koukyosyumei/noir.git", package = "nargo_cli", branch = "zkfuzz" }
nargo = { git = "https://github.com/Koukyosyumei/noir.git", package = "nargo", branch = "zkfuzz" }
bn254_blackbox_solver = { git = "https://github.com/Koukyosyumei/noir.git", package = "bn254_blackbox_solver", branch = "zkfuzz" }
brillig = { git = "https://github.com/Koukyosyumei/noir.git", package = "brillig", branch = "zkfuzz" }
acvm = { git = "https://github.com/Koukyosyumei/noir.git", package = "acvm", branch = "zkfuzz" }
acir = { git = "https://github.com/Koukyosyumei/noir.git", package = "acir", branch = "zkfuzz" }
noirc_abi = { git = "https://github.com/Koukyosyumei/noir.git", package = "noirc_abi", branch = "zkfuzz" }
fm = { git = "https://github.com/Koukyosyumei/noir.git", package = "fm", branch = "zkfuzz" }
clap = { version = "4.3.19", features = ["derive", "env"] }
color-eyre = "0.6.2"
const_format = "0.2.30"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
serde_json = "1.0"
rand = "0.9.1"

[profile.release]
panic = "unwind"
