[package]
name = "proofuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
program_analysis = { package = "circomspect-program-analysis", version = "0.8.1", path = "./circomspect/program_analysis" }
program_structure = { package = "circomspect-program-structure", version = "2.1.3", path = "./circomspect/program_structure" }